# Banking_bunchhay1

./: .cursorrules.save  .gitignore  build.gradle  docker-compose-online.yml  pom.xml  render.yaml  settings.gradle  yes  yes.pub
k8s/: 01-postgres.yaml  02-kafka-stack.yaml  03-microservices.yaml  blue-green-deployment.yaml  phase8-infrastructure.yaml
legacy-cbs-simulator/: Dockerfile  build.gradle  pom.xml
scripts/: init-promotiondb.sql
secrets/: README.md  core-banking-signed.crt  core-banking.csr  core-banking.keystore.jks  kafka.server.keystore.jks  kafka.server.truststore.jks  kafka_keystore_credentials  notifications-signed.crt  notifications.csr  notifications.keystore.jks  promotions-signed.crt  promotions.csr  promotions.keystore.jks  titan-broker-signed.crt  titan-broker.csr  titan-ca.crt  titan-ca.jks
titan gateway /: Cargo.toml  Dockerfile  config.toml
titan gateway /src/: auth.rs  config.rs  logger.rs  main.rs  proxy.rs  rate_limit.rs
titan-ai-service/: Dockerfile  main.py  render.yaml  requirements.txt  risk_engine.proto
titan-cbs-adapter/: Dockerfile  build.gradle  pom.xml
titan-core-banking/: .env.backup  .env.render  .gitignore  Dockerfile  README.md  build.gradle  pom.xml  prometheus.yml  render.yaml  settings.gradle
titan-darkpool-service/: Dockerfile  README.md  pom.xml
titan-edge-ai/: .gitignore  README.md  fraud_model.pkl  index.html  model_weights.json  scaler_params.json  serve.py  train_model.py  verify_model.py
titan-event-consumer-lib/: build.gradle  pom.xml  settings.gradle
titan-federated-learning/: DEMO_RESULTS.md  (+4 more)
(+493 files in other folders)
